admin can log out
