# app/storage/api-docs/api-docs.json
@@ -139,6 +139,41 @@
                     }
                 }
             }
+        },
+        "/api/v1/admin/logout": {
+            "get": {
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Logout an Admin Account",
+                "operationId": "364e0ee6217385ff1be854ebe26d1965",
+                "responses": {
+                    "200": {
+                        "description": "logout success"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "name": "Authorization",
+                "in": "header",
+                "scheme": "bearer"
+            }
         }
     }
 }
